# test_eapteka

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  run_tests.sh
fragments/: base_steps.py
fragments/main_page_fragments/search_fragment/: search_locators.py  search_steps.py
fragments/notification_fragments/: notification_locators.py  notification_steps.py
fragments/product_fragments/: product_locators.py  product_steps.py
fragments/region_fragments/: region_locators.py  region_steps.py
pages/: base_steps.py
pages/search_page/: search_page_locators.py  search_page_steps.py
tests/: test_search_page.py
tests/test_main_page/: test_search.py
